@@ -4,8 +4,9 @@ lyricue3 (3.0.9.2-1) maverick; urgency=low
   * Add lsdvd to dependancies
   * Report port number is process name
   * Fix crash when going back past first item
+  * Enable live video backgrounds
 
- -- Chris Debenham <chris@adebenham.com>  Wed, 22 Sep 2010 17:30:00 +1000
+ -- Chris Debenham <chris@adebenham.com>  Thu, 23 Sep 2010 17:30:00 +1000
 
 lyricue3 (3.0.9.1-1) maverick; urgency=low
 
